--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,66 @@
+@import './reset.css';
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
+@import './header.css';
+@import './main-layout.css';
+@import './projects.css';
+@import './contact.css';
+@import './blog.css';
+@import './article.css';
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  min-height: 100vh;
+  margin: 0 auto;
+  width: 80%;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto 1fr auto;
+}
+
+h1,
+h2,
+h3,
+p,
+a,
+time,
+footer,
+input,
+textarea {
+  font-family: 'Roboto', sans-serif;
+  color: #464444;
+}
+
+h1 {
+  font-size: 18px;
+}
+
+h2 {
+  font-size: 36px;
+}
+
+h3 {
+  font-size: 16px;
+}
+
+p,
+input,
+textarea {
+  font-size: 16px;
+  line-height: 150%;
+}
+
+time {
+  color: rgb(150, 150, 150);
+  font-size: 14px;
+  font-weight: 300;
+}
+
+footer {
+  padding: 30px 0;
+  font-size: 14px;
+  font-weight: 300;
+}
