--- a/css/blog.css
+++ b/css/blog.css
@@ -14,15 +14,27 @@
 .blog-headline {
   font-size: 24px;
   font-weight: 700;
-  margin-top: 10px;
+  margin: 10px 0 15px 0;
 }
 
 .blog-sub-headline {
   font-size: 17px;
-  margin: 10px 0;
+  margin-bottom: 15px;
 }
 
 .blog-content {
-  font-size: 16px;
   font-weight: 300;
+}
+
+@media (min-width: 768px) {
+  .blog {
+    margin-top: 100px;
+  }
+  .blog-headline {
+    font-size: 36px;
+  }
+
+  .blog-content {
+    max-width: 600px;
+  }
 }
