--- a/css/header.css
+++ b/css/header.css
@@ -9,38 +9,42 @@
   text-decoration: none;
 }
 
-.title {
+.main-header .title-section {
+  width: 70%;
+}
+
+.main-header .title {
   font-weight: 700;
 }
 
-.sub-title {
+.main-header .sub-title {
   margin: 8px 0;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: 300;
 }
 
-.mobile-nav-button {
-  border: none;
-  outline: none;
-  background: none;
-  align-self: flex-start;
-  font-size: 25px;
+.main-header .main-nav {
+  display: flex;
+  flex-direction: column;
 }
 
-.main-nav {
-  display: none;
-  font-size: 16px;
+.main-header a {
+  font-weight: 300;
+  margin-bottom: 10px;
 }
 
-@media (min-width: 1000px) {
-  .mobile-nav-button {
-    display: none;
+@media (min-width: 768px) {
+  .main-header .main-nav {
+    flex-direction: row;
   }
 
-  .main-nav {
-    display: flex;
-    justify-content: space-between;
-    min-width: 500px;
-    font-weight: 300;
+  .main-nav a {
+    margin-left: 25px;
+  }
+}
+
+@media (min-width: 900px) {
+  .main-nav a {
+    margin-left: 50px;
   }
 }
