--- a/css/article.css
+++ b/css/article.css
@@ -3,25 +3,68 @@
   grid-template-columns: 1fr;
   grid-auto-rows: auto auto auto;
   grid-gap: 40px;
+  margin-top: 100px;
 }
 
 .article-headline {
-  margin: 10px 0 20px 0;
+  margin: 10px 0;
   font-size: 30px;
   font-weight: 700;
 }
 
 .article-sub-headline {
   font-size: 17px;
+  margin-bottom: 20px;
 }
 
+.author-avatar {
+  border-radius: 50%;
+  height: 35px;
+  width: 35px;
+}
+
+.author-name {
+  margin-top: 10px;
+}
+
+.author-social-link,
+.article a,
+.author-item {
+  color: rgb(150, 150, 150);
+}
+
+.author-social-link,
+.author-bio,
 .article-content {
   font-weight: 300;
+}
+
+.author-item {
+  font-size: 14px;
+}
+
+.author-social-link {
+  border: none;
+  background: none;
+  padding: 0 0;
+  margin-right: 15px;
+}
+
+.article-content p {
   margin-bottom: 20px;
 }
 
 .article-img {
   width: 100%;
+  margin-bottom: 20px;
+}
+
+.article a {
+  text-decoration: none;
+}
+
+.article button {
+  outline: none;
 }
 
 @media (min-width: 550px) {
@@ -32,11 +75,35 @@
   .article-img {
     height: 250px;
   }
+
+  .author-avatar {
+    height: 65px;
+    width: 65px;
+  }
+
+  .author-info {
+    display: flex;
+    align-items: center;
+  }
+
+  .author-details {
+    margin-left: 10px;
+  }
+
+  .author-bio {
+    margin-top: 0;
+    max-width: 400px;
+  }
 }
 
 @media (min-width: 750px) {
+  .article {
+    margin-top: 150px;
+  }
+
   .article-sub-headline {
     font-size: 20px;
+    font-weight: 500;
   }
   .article-img {
     width: auto;
@@ -48,6 +115,7 @@
     font-size: 18px;
   }
   .article-sub-headline {
-    font-size: 24px;
+    font-size: 20px;
+    font-weight: 500;
   }
 }
