--- a/css/reset.css
+++ b/css/reset.css
@@ -88,7 +88,7 @@ video {
   padding: 0;
   border: 0;
   font-size: 100%;
-  font: inherit;
+  /* font: inherit; */
   vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
@@ -114,14 +114,14 @@ ul {
 }
 blockquote,
 q {
-  quotes: none;
+  /*  */
 }
 blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: '';
-  content: none;
+  /* content: '';
+  content: none; */
 }
 table {
   border-collapse: collapse;
