feature: Add latest post blog cards to home page

--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,7 @@
 @import './contact.css';
 @import './blog.css';
 @import './article.css';
+@import './blog-cards.css';
 
 * {
   box-sizing: border-box;
