--- a/css/main-layout.css
+++ b/css/main-layout.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  min-height: 70vh;
 }
 
 .main h2 {
@@ -23,6 +24,9 @@
 }
 
 @media (min-width: 768px) {
+  .main {
+    max-height: 30vh;
+  }
   .main h2 {
     font-size: 65px;
   }
@@ -32,7 +36,7 @@
   }
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 1025px) {
   .main p {
     max-width: 650px;
   }
